fixed styling issue for header title on small devices

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://themezee.com/themes/palm-beach/
 Author: ThemeZee
 Author URI: https://themezee.com
 Description: Palm Beach is a professional WordPress theme perfectly suited for a travel magazine. It features a stunning fullscreen slider, beautiful typography and a three-column grid-layout for posts. Head off on vacation now!
-Version: 1.6.3
+Version: 1.6.4
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: palm-beach
@@ -782,8 +782,7 @@ textarea {
 	width: 100%;
 }
 
-.header-title,
-.header-title-image-container .header-title {
+.header-title {
 	display: inline;
 	margin: 0;
 	padding: 0;
@@ -796,6 +795,10 @@ textarea {
 	font-size: 64px;
 	font-size: 4rem;
 	font-family: 'Montserrat', Verdana, Arial;
+}
+
+.header-title-image-container .header-title {
+	color: #fff;
 }
 
 /* Page Header without image */
